# marketing-decision-intelligence

./: .gitignore  DESIGN.md  ROADMAP.md  pyproject.toml  requirements.txt
conf/: config.yaml
notebooks/: 01_eda.ipynb  02_experiment_readout.ipynb  03_response_model.ipynb
scripts/: download_data.py  run_m1_sql.py  run_m2_eda.py  run_m3_stats.py  run_m4_model.py
sql/: 01_arm_sizes.sql  02_response_by_arm.sql  03_raw_lift_binary.sql  04_visit_rate_by_customer_attribute.sql  05_spend_distribution.sql
src/mdip/: __init__.py  config.py  features.py  logging_setup.py  response_model.py
src/mdip/data/: database.py  load.py
src/mdip/eda/: plots.py  profile.py
src/mdip/stats/: bootstrap.py  experiment.py  multiple_testing.py  plots.py  power.py  proportion.py
src/mdip/viz/: style.py
tests/: test_m1_data.py  test_m2_eda.py  test_m3_stats.py  test_m4_model.py
